--- a/index.html
+++ b/index.html
@@ -76,27 +76,24 @@
                         <div class="hpheader">
                             <div class="grhead">
                                 <div class="lcol hidden-xs hidden-sm">
-                                    <div class="tpsubmnhead">
-                                        <ul>
-                                            <li><a href="about.html">Về chúng tôi</a></li>
-                                            <li><a href="services.html">Dịch vụ</a></li>
-                                            <li><a href="working_space.html">Môi trường làm việc</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="ccol">
-                                    <div class="tplogohead">
-                                        <h2><a href="index.html"><img src="images/logo.png" alt=""></a></h2>
-                                    </div>
-                                </div>
-                                <div class="rcol">
                                     <div class="tptoolhead">
                                         <div class="grtool">
-                                            <div class="tcol hidden-xs hidden-sm">
+                                            <div class="tcol">
+                                                <div class="tpsubmnhead">
+                                                    <ul>
+                                                        <li><a href="about.html">Giới Thiệu</a></li>
+                                                        <li><a href="services.html">Dịch Vụ</a></li>
+                                                        <li class=""><a href="project.html">Dự Án</a></li>
+                                                        <li><a href="">Tin Tức</a></li>
+                                                        <li><a href="">Tuyển Dụng</a></li>
+                                                        <li><a href="">Liên hệ</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <div class="tcol">
                                                 <div class="itsearchhead">
                                                     <div class="scicon">
                                                         <span class="iimg"><img src="images/isearch.svg" alt=""></span>
-                                                        <span class="itxt">Tìm kiếm</span>
                                                     </div>
                                                     <div class="scpops">
                                                         <div class="wrapper">
@@ -110,19 +107,22 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="tcol hidden-xs hidden-sm">
-                                                <div class="itlinkhead">
-                                                    <a href="faq.html">FAQs</a>
+                                            <div class="tcol">
+                                                <div class="itlanghead">
+                                                    <a href="">EN</a>
                                                 </div>
                                             </div>
-                                            <div class="tcol hidden-xs hidden-sm">
-                                                <div class="itphonehead">
-                                                    <a href="">
-                                                        <span class="vicon"><img src="images/iphone.svg" alt=""></span>
-                                                        <span class="vtext">Liên hệ chúng tôi</span>
-                                                    </a>
-                                                </div>
-                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="ccol">
+                                    <div class="tplogohead">
+                                        <h2><a href="index.html"><img src="images/logo.png" alt=""></a></h2>
+                                    </div>
+                                </div>
+                                <div class="rcol hidden-md hidden-lg">
+                                    <div class="tptoolhead">
+                                        <div class="grtool">
                                             <div class="tcol">
                                                 <div class="itlanghead">
                                                     <a href="">EN</a>
@@ -1195,12 +1195,36 @@
             <div id="vh-footer">
                 <div class="vhtopfoot">
                     <div class="wrapper">
+                        <div class="tplogofoot">
+                            <div class="lgend">
+                                <img src="images/logofoot.png" alt="">
+                            </div>
+                        </div>
                         <div class="hptopfoot">
                             <div class="grtop">
                                 <div class="mcol">
-                                    <div class="tplogofoot">
-                                        <div class="lgend">
-                                            <img src="images/logofoot.png" alt="">
+                                    <div class="tpaddrefoot">
+                                        <div class="dcttile">
+                                            <h3>CÔNG TY TNHH FORG ARCHITECTS</h3>
+                                        </div>
+                                        <div class="dcconts">
+                                            MST: 0313 587 467
+                                        </div>
+                                    </div>
+                                    <div class="tpaddrefoot">
+                                        <div class="dcttile vcolor">
+                                            <h3>VĂN PHÒNG ĐẠI DIỆN</h3>
+                                        </div>
+                                        <div class="dcconts">
+                                            Toà nhà Rosana, số 60 Nguyễn Đình Chiểu, Phường Đa Kao, Quận 1, Thành phố Hồ Chí Minh
+                                        </div>
+                                    </div>
+                                    <div class="tpaddrefoot">
+                                        <div class="dcttile vcolor">
+                                            <h3>CHI NHÁNH</h3>
+                                        </div>
+                                        <div class="dcconts">
+                                            165 – 167 Nguyễn Thị Thập, Phường Tân Hưng, Quận 7, Thành phố Hồ Chí Minh.
                                         </div>
                                     </div>
                                 </div>
@@ -1222,87 +1246,43 @@
                                     </div>
                                 </div>
                                 <div class="bcol">
-                                    <div class="tpbotfootma">
-                                        <div class="magrip">
-                                            <div class="vvcol">
-                                                <div class="mmgrip">
-                                                    <div class="bacol">
-                                                        <div class="tpaddrefoot">
-                                                            <div class="dcttile">
-                                                                <h3>CÔNG TY TNHH FORG ARCHITECTS</h3>
-                                                            </div>
-                                                            <div class="dcconts">
-                                                                MST: 0313 587 467
-                                                            </div>
-                                                        </div>
-                                                        <div class="tpaddrefoot">
-                                                            <div class="dcttile">
-                                                                <h3>VĂN PHÒNG ĐẠI DIỆN</h3>
-                                                            </div>
-                                                            <div class="dcconts">
-                                                                Toà nhà Rosana, số 60 Nguyễn Đình Chiểu, Phường Đa Kao, Quận 1, Thành phố Hồ Chí Minh
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="bbcol">
-                                                        <div class="tpinfosfoot">
-                                                            <div class="iftitle">
-                                                                <h3>Liên hệ</h3>
-                                                            </div>
-                                                            <div class="ifconts">
-                                                                <ul>
-                                                                    <li><a href="">+84 (0) 28 222 08 008</a></li>
-                                                                    <li><a href="">admin@forgarchitects.com</a></li>
-                                                                </ul>
-                                                            </div>
-                                                        </div>
-                                                        <div class="tpaddrefoot">
-                                                            <div class="dcttile">
-                                                                <h3>CHI NHÁNH</h3>
-                                                            </div>
-                                                            <div class="dcconts">
-                                                                165 – 167 Nguyễn Thị Thập, Phường Tân Hưng, Quận 7, Thành phố Hồ Chí Minh.
-                                                            </div>
-                                                        </div>
-                                                    </div>
+                                    <div class="tpinfosfoot">
+                                        <div class="iftitle">
+                                            <h3>Liên hệ</h3>
+                                        </div>
+                                        <div class="ifconts">
+                                            <ul>
+                                                <li><a href="">+84 (0) 28 222 08 008</a></li>
+                                                <li><a href="">admin@forgarchitects.com</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="tpformsfoot">
+                                        <div class="frtitle">
+                                            <h3>Hoặc bạn cần chúng tôi liên hệ cho bạn?</h3>
+                                        </div>
+                                        <div class="frconts">
+                                            <form action="">
+                                                <div class="ctpon">
+                                                    <input type="text" name="" id="" placeholder="Nhập email liên hệ">
+                                                    <button>
+                                                        <span>Gửi</span>
+                                                        <span><img src="images/send.png" alt=""></span>
+                                                    </button>
                                                 </div>
-                                            </div>
-                                            <div class="vvcol">
-                                                <div class="mmgrip">
-                                                    <div class="bccol">
-                                                        <div class="tpsociafoot">
-                                                            <div class="sctitle">
-                                                                <h3>Mạng xã hội</h3>
-                                                            </div>
-                                                            <div class="scconts">
-                                                                <ul>
-                                                                    <li><a href=""><img src="images/isoc1.png" alt=""></a></li>
-                                                                    <li><a href=""><img src="images/isoc2.png" alt=""></a></li>
-                                                                    <li><a href=""><img src="images/isoc3.png" alt=""></a></li>
-                                                                </ul>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="bdcol">
-                                                        <div class="tpformsfoot">
-                                                            <div class="frtitle">
-                                                                <h3>Hoặc bạn cần chúng tôi liên hệ cho bạn?</h3>
-                                                            </div>
-                                                            <div class="frconts">
-                                                                <form action="">
-                                                                    <div class="ctpon">
-                                                                        <input type="text" name="" id="" placeholder="Nhập email liên hệ">
-                                                                        <button>
-                                                                            <span>Gửi</span>
-                                                                            <span><img src="images/send.png" alt=""></span>
-                                                                        </button>
-                                                                    </div>
-                                                                </form>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                    <div class="tpsociafoot">
+                                        <div class="sctitle">
+                                            <h3>Mạng xã hội</h3>
+                                        </div>
+                                        <div class="scconts">
+                                            <ul>
+                                                <li><a href=""><img src="images/isoc1.png" alt=""></a></li>
+                                                <li><a href=""><img src="images/isoc2.png" alt=""></a></li>
+                                                <li><a href=""><img src="images/isoc3.png" alt=""></a></li>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
