update menu + main

--- a/index.html
+++ b/index.html
@@ -48,11 +48,41 @@
                                 <img src="images/main/banner.jpg" alt="">
                             </div>
                         </div>
+                        <div class="bancapts">
+                            <div class="wrapper">
+                                <div class="csinner">
+                                    <div class="cstitle">
+                                        Thiết Kế Kiến Trúc Bền Vững
+                                    </div>
+                                    <div class="csconts">
+                                        ForG mang đến giải pháp thiết kế nội thất sáng tạo, kết hợp chức năng và thẩm mỹ, tối ưu không gian sống và làm việc.                     
+                                    </div>
+                                    <div class="csviews">
+                                        <a href="">Xem thêm</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="item">
                         <div class="banvdimg">
                             <div class="bg" style="background-image: url(images/main/banner1.jpg)">
                                 <img src="images/main/banner1.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="bancapts">
+                            <div class="wrapper">
+                                <div class="csinner">
+                                    <div class="cstitle">
+                                        Thiết Kế Kiến Trúc Bền Vững
+                                    </div>
+                                    <div class="csconts">
+                                        ForG mang đến giải pháp thiết kế nội thất sáng tạo, kết hợp chức năng và thẩm mỹ, tối ưu không gian sống và làm việc.                     
+                                    </div>
+                                    <div class="csviews">
+                                        <a href="">Xem thêm</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -70,7 +100,7 @@
             </div>
             <!--==END - BANNER==-->
             <!--==BEGIN - HEADER==-->
-            <div id="vh-header">
+            <div id="vh-header" class="hdmain">
                 <div class="vhheader">
                     <div class="wrapper">
                         <div class="hpheader">
@@ -82,7 +112,28 @@
                                                 <div class="tpsubmnhead">
                                                     <ul>
                                                         <li><a href="about.html">Giới Thiệu</a></li>
-                                                        <li><a href="services.html">Dịch Vụ</a></li>
+                                                        <li><a href="services.html">Dịch Vụ</a>
+                                                            <ul>
+                                                                <li><a href="">Sub menu 1</a>
+                                                                    <ul>
+                                                                        <li><a href="">Sub menu 11</a></li>
+                                                                        <li><a href="">Sub menu 12</a></li>
+                                                                        <li><a href="">Sub menu 13</a></li>
+                                                                        <li><a href="">Sub menu 14</a></li>
+                                                                    </ul>
+                                                                </li>
+                                                                <li><a href="">Sub menu 2</a>
+                                                                    <ul>
+                                                                        <li><a href="">Sub menu 21</a></li>
+                                                                        <li><a href="">Sub menu 22</a></li>
+                                                                        <li><a href="">Sub menu 23</a></li>
+                                                                        <li><a href="">Sub menu 24</a></li>
+                                                                    </ul>
+                                                                </li>
+                                                                <li><a href="">Sub menu 3</a></li>
+                                                                <li><a href="">Sub menu 4</a></li>
+                                                            </ul>
+                                                        </li>
                                                         <li class=""><a href="project.html">Dự Án</a></li>
                                                         <li><a href="">Tin Tức</a></li>
                                                         <li><a href="">Tuyển Dụng</a></li>
